site/css/components.css
html {
  height: auto;
  font-size: 18px;
  scroll-behavior: smooth;
}

@media only screen and (max-width: 800px) {
  html {
    font-size: 16px;
  }
}

body {
  height: auto;
  background-color: var(--bg1);
  color: var(--fg);
  font-size: 1rem;
  line-height: 1.4;
  font-family: sans-serif;
  font-weight: normal;
  margin: 0px;
}

::selection {
  background-color: var(--primaryAlt);
  color: var(--bg1);
}

h1,
.h1 {
  font-size: 3.4rem;
  font-weight: bold;
  margin-bottom: 1rem;
  margin-top: 0px;
}

h2,
.h2 {
  font-size: 2.8rem;
  font-weight: bold;
  margin-bottom: 1rem;
  margin-top: 0px;
}

h3,
.h3 {
  font-size: 2.2rem;
  font-weight: bold;
  margin-bottom: 1rem;
  margin-top: 0px;
}

h4,
.h4 {
  font-size: 1.6rem;
  font-weight: bold;
  margin-bottom: 1rem;
  margin-top: 0px;
}

h1, h2, h3, h4,
.h1, .h2, .h3, .h4 {
  line-height: 1.2;
}

h5,
.h5,
p {
  font-size: 1rem;
  font-weight: normal;
  margin-top: 0px;
  margin-bottom: 1rem;
}
/* TEMPORARY FIX */
p {
  margin-block-end: 0px;
}

h6,
.h6,
small {
  font-size: 0.8rem;
  font-weight: normal;
  margin-bottom: 1rem;
}

h5, p, h6, small,
.h5, .h6 {
  line-height: 1.4;
}

b,
.b {
  font-weight: bold;
}

i,
.i {
  font-style: italic;
}

/*
nerdfont icons shouldn't have same styling as italic element lol
*/
i.nf {
  font-style: normal;
}

s,
.s {
  text-decoration: line-through;
}

mark,
.mark {
  background-color: var(--fg);
  color: var(--bg1);
  border-radius: 0.8rem;
  padding: 0.2rem 0.4rem;
  font-size: 1rem;
  line-height: 1.4;
}

code,
.code {
  font-family: monospace;
  background-color: var(--bg2);
  border-radius: 0.8rem;
  padding: 0.2rem 0.4rem;
  font-size: 1rem;
  line-height: 1.4;
}

.box {
  color: var(--fg);
  border: 0.2rem solid var(--bg2);
  border-radius: 0.8rem;
  padding: 1rem;
}

button,
.button {
  font-size: 1rem;
  line-height: 1.4rem;
  padding: 0.4rem 0.8rem;
  color: var(--primary);
  background: var(--bg1);
  box-shadow: none;
  border: 0.2rem solid var(--bg2);
  border-radius: 0.8rem;
  transition-duration: 0.4s;
}

button:hover,
.button:hover,
button:focus,
.button:focus {
  color: var(--primaryAlt);
  background: var(--bg1Alt);
  border: 0.2rem solid var(--bg2);
}

button:focus-visible,
.button:focus-visible {
  outline: 0.2rem solid var(--primary);
  outline-offset: 0.2rem;
  transition-duration: 0.1s; 
}

button.select,
.button.select {
  color: var(--fg);
  border-color: var(--bg2);
}

button.select:hover,
.button.select:hover,
button.select:focus,
.button.select:focus {
  color: var(--primaryAlt);
  border-color: var(--bg2);
}

button.select.selected,
.button.select.selected {
  color: var(--primary);
  border-color: var(--primary);
}

.dropdown {
  position: rleative;
  display: inline-block;
}

.dropdown .content {
  display: none;
  position: absolute;
  z-index: 1;
  flex-direction: column;
  align-items: stretch;
  gap: 0.2rem;
  padding: 0.2rem;
  background: var(--bg1);
  border: 0.2rem solid var(--bg2);
  border-radius: 0.8rem;
}

.dropdown:focus-within .content {
  display: flex;
}

.dropdown .toggle {
  font-size: 1rem;
  padding: 0.4rem;
  color: var(--fg);
  background: var(--bg1);
  box-shadow: none;
  border: none;
  border-radius: 0.8rem;
}

.dropdown .toggle:hover,
.dropdown .toggle:focus {
  color: var(--primary);
  background: var(--bg1Alt);
  outline: none;
}

.dropdown .content button,
.dropdown .content .button {
  font-size: 1rem;
  padding: 0.4rem 0.8rem;
  color: var(--fg);
  background: var(--bg1);
  box-shadow: none;
  border: none;
  border-radius: 0.8rem;
}

.dropdown .content button:hover,
.dropdown .content .button:hover,
.dropdown .content button:focus,
.dropdown .content .button:focus {
  color: var(--primary);
  background: var(--bg1Alt);
  outline: none;
}

.modal {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 200;
  top: 0px;
  left: 0px;
  width: 100vw;
  height: 100vh;
}

.modal::before {
  content: "";
  position: fixed;
  z-index: 180;
  top: 0px;
  left: 0px;
  width: 100vw;
  height: 100vh;
  background-color: var(--bg1);
  opacity: 0.6;
}

.modal .content {
  z-index: 200;
  width: 60vw;
  padding: 1rem;
  background-color: var(--bg1);
  border: 0.2rem solid var(--bg2);
  border-radius: 0.8rem;
}

/*
the html of a radio should look like:

<div class="radio>
  <input type="radio" id="id" ... />
  <label for="id">text</label>
</div>
*/
.radio,
.checkbox {
  display: grid;
  grid-template-columns: 1.8rem auto 1fr;
  grid-template-areas: "input label .";
  gap: 1em;
}

.radio input,
.checkbox input {
  grid-area: input;
}

.radio label,
.checkbox label {
  grid-area: label;
}

input[type="radio"],
input[type="checkbox"] {
  appearance: none;
  width: 1.8rem;
  height: 1.8rem;
  margin: 0px;
  background-color: var(--bg1);
  border: 0.2rem solid var(--bg2);
  transition-duration: 0.4s;
}

input[type="radio"] {
  border-radius: 50%;
}

input[type="checkbox"] {
  border-radius: 0.6rem;
}

input[type="radio"]:hover,
input[type="radio"]:focus
input[type="radio"]:focus-visible,
input[type="checkbox"]:hover,
input[type="checkbox"]:focus,
input[type="checkbox"]:focus-visible {
  border-color: var(--primaryAlt);
}

input[type="radio"]:focus-visible,
input[type="checkbox"]:focus-visible {
  outline: 0.2rem solid var(--primary);
  outline-offset: 0.2rem;
  transition-duration: 0.1s;
}

input[type="radio"]:checked,
input[type="checkbox"]:checked {
  background-color: var(--primary);
  transition-duration: 0.1s;
}

::placeholder {
  font-size: 1rem;
  color: var(--bg3);
  opacity: 1;
  font-family: sans-serif;
  font-weight: normal;
}

input[type="text"],
input[type="password"],
textarea {
  display: inline-block;
  appearance: none;
  box-sizing: border-box;
  align-items: flex-start;
  max-width: 40vw;
  cursor: text;
  text-decoration: none;
  text-align: left;
  font-family: sans-serif;
  background-color: var(--bg1);
  color: var(--fg);
  border: 0.2rem solid var(--primary);
  border-radius: 0.8rem;
  padding: 0.4rem 0.8rem;
  font-size: 1rem;
  line-height: 1.4;
  transition-duration: 0.4s;
}

input[type="text"]:hover,
input[type="text"]:focus,
input[type="text"]:focus-visible,
input[type="password"]:hover,
input[type="password"]:focus,
input[type="password"]:focus-visible,
textarea:hover,
textarea:focus,
textarea:focus-visible {
  border-color: var(--primaryAlt);
}

input[type="text"]:focus-visible,
input[type="password"]:focus-visible,
textarea:focus-visible {
  outline: 0.2rem solid var(--primary);
  outline-offset: 0.2rem;
  transition-duration: 0.1s;
}

a,
.a {
  font-size: 1rem;
  line-height: 1.4;
  color: var(--primary);
  cursor: pointer;
  border-radius: 0.8rem;
  text-decoration: underline;
  text-decoration-skip-ink: all;
  transition-duration: 0.4s;
}

a:hover,
a:focus,
a:focus-visible,
.a:hover,
.a:focus,
.a:focus-visible {
  color: var(--primaryAlt);
}

a:focus-visible,
.a:focus-visible {
  outline: 0.2rem solid var(--primary);
  outline-offset: 0.4rem;
  transition-duration: 0.1s;
}

